--- a/public-bubble/app/views/loginForm.scala.html
+++ b/public-bubble/app/views/loginForm.scala.html
@@ -12,7 +12,7 @@
 
 <script src="https://apis.google.com/js/client:platform.js" async defer></script>
 <meta name="google-signin-client_id"
-      content="@{Play.current.configuration.getString("google.clientId")}">
+      content="@{Play.current.configuration.getString("google.oauth.clientId")}">
 
 <script>
     function onSignIn(googleUser) {
