--- a/public-bubble/app/views/logoutButton.scala.html
+++ b/public-bubble/app/views/logoutButton.scala.html
@@ -1,7 +1,7 @@
 @import play.api.Play
 
 <meta name="google-signin-client_id"
-      content="@{Play.current.configuration.getString("google.clientId")}">
+      content="@{Play.current.configuration.getString("google.oauth.clientId")}">
 
 <a href="#" onclick="signOut();" class="alert bbutton round">Sign out</a>
 
