--- a/public-bubble/public/stylesheets/main.css
+++ b/public-bubble/public/stylesheets/main.css
@@ -47,3 +47,8 @@ html, body, #container { height: 70%; }
     display: block;
     color: white;
 }
+
+.bigMap {
+    height: 150px;
+    width:200px;
+    }
