--- a/public-bubble/app/views/events.scala.html
+++ b/public-bubble/app/views/events.scala.html
@@ -1,7 +1,7 @@
 @import play.api.Play
 @import util.GooglePlace
 
-@(mainEvent : Event, remainingEvents: Seq[Event], eventLocation: Option[GooglePlace])
+@(mainEvent : Event, eventLocation: Option[GooglePlace], futureEvents : Seq[Event], pastEvents: Seq[Event])
 
 @main("Events") {
 <div id="eventPage" class="row">
@@ -10,8 +10,17 @@
             <div class="hide-for-small">
 
                 <nav class="side-nav ">
-                    @for(event <- remainingEvents) {
+                    @if(!pastEvents.isEmpty) {
+                        <h2>Past Events</h2>
+                    }
+                    @for(event <- pastEvents) {
                          <h3><a href="/event/@event.id">@event.title</a></h3>
+                    }
+                    @if(!futureEvents.isEmpty) {
+                    <h2>Upcoming Events</h2>
+                    }
+                    @for(event <- futureEvents) {
+                    <h3><a href="/event/@event.id">@event.title</a></h3>
                     }
                 </nav>
             </div>
