Rearrange events page CSS

--- a/public-bubble/app/views/portal.scala.html
+++ b/public-bubble/app/views/portal.scala.html
@@ -5,6 +5,7 @@
 <h1>Hello Stranger! @{id}</h1>
 
 <li><a href="/create/event">Add or Edit an Event</a></li>
+<li><a href="/create/blog">Add or Edit a Blog entry</a></li>
 
 @logoutButton()
 
