--- a/public-bubble/app/views/events.scala.html
+++ b/public-bubble/app/views/events.scala.html
@@ -1,58 +1,54 @@
 @import play.api.Play
 @import util.GooglePlace
 
-@(mainEvent : Event, eventLocation: Option[GooglePlace], futureEvents : Seq[Event], pastEvents: Seq[Event])
+@(mainEvent : Event, eventLocation: Option[GooglePlace], pastEvents : Seq[Event], futureEvents: Seq[Event])
 
 @main("Events") {
-<div id="eventPage" class="row">
-    <div class="large-3 columns">
-        <div class="sidebar"> <!-- TODO move into tag -->
+<div class="row"><!--Beginning of the master row-->
+        <div class="sidebar columns large-3"> <!-- TODO move into tag -->
             <div class="hide-for-small">
-
                 <nav class="side-nav ">
-                    @if(!pastEvents.isEmpty) {
-                        <h2>Past Events</h2>
-                    }
-                    @for(event <- pastEvents) {
-                         <h3><a href="/event/@event.id">@event.title</a></h3>
-                    }
                     @if(!futureEvents.isEmpty) {
-                    <h2>Upcoming Events</h2>
+                    <h4>Upcoming Events</h4>
                     }
                     @for(event <- futureEvents) {
-                    <h3><a href="/event/@event.id">@event.title</a></h3>
+                    <b><a href="/event/@event.id">@event.title</a></b>
+                    <br/>
+                    }
+                    @if(!pastEvents.isEmpty) {
+                        <h4>Past Events</h4>
+                    }
+                    @for(event <- pastEvents) {
+                         <b><a href="/event/@event.id">@event.title</a></b>
+                         <br/>
                     }
                 </nav>
             </div>
         </div>
-    </div>
     <section>
-        <div class="row">
-        <div class="large-9 columns" >
+        <div id="mainEventContainer" class="columns large-9"><!--TODO the article container-->
             <h3><i>@{mainEvent.title}</i></h3>
-        </div>
-        </div>
-        <div class="row">
             <img src="@{mainEvent.image1Url}"> <!-- http://placehold.it/800x370&text=[img] -->
-        </div>
-        <div class="row">
-            @if(eventLocation.isEmpty) {
-                <p>@{mainEvent.location}</p>
-                } else {
-            @googlePlaceTag(eventLocation.get)
-            <div class="panel" id="addressText">
-            <h4><b>@{eventLocation.get.name}</b></h4>
-            @{eventLocation.get.formattedAddress}
-            <br/>
-            <br/>
 
+            <div id="whenAndWhere" class="row">
+
+            @if(eventLocation.isEmpty) {
+                    <p>@{mainEvent.location}</p>
+                    } else {
+                <div class="columns large-3">
+                @googlePlaceTag(eventLocation.get)
+                </div>
+            <div class="panel columns large-9" id="addressText"> <!-- TODO takes size of parent - i.e. mainEventContainer-->
+                <h4><b>@{eventLocation.get.name}</b></h4>
+                @{eventLocation.get.formattedAddress}
+                <br/>
+                <br/>
+            <div/>
+            </div>
         @startTimeEndTimeTag(mainEvent.startTime, mainEvent.endTime)
-        </div>
         }
-        </div>
-        <div class="row">
-            <p>@Html(mainEvent.description)</p>
+        <p>@Html(mainEvent.description)</p>
         </div>
     </section>
-</div>
+</div> <!--End of the master row-->
 }
