--- a/public-bubble/app/views/noContent.scala.html
+++ b/public-bubble/app/views/noContent.scala.html
@@ -1,6 +1,6 @@
 @(missingContent: String)
 
-@main("Welcome to Play") {
+@main(s"No $missingContent found!") {
 
 <h1 class="column small-5 small-centered">Come back later for more @{missingContent}!</h1>
 
