--- a/public-bubble/app/views/createEvent.scala.html
+++ b/public-bubble/app/views/createEvent.scala.html
@@ -5,23 +5,44 @@
 @wysiwyg()
 
 <div class="g-signin2" data-onsuccess="onSignIn"></div>
-<div id="eventsBox" class="small-2 columns"></div>
+
+
+@if(!eventForm.value.isEmpty){
+<button id="    newEvent" onclick="window.location = '/create/event';">
+    Create new event
+</div>
+}
+<div id="eventsBox" class=".col-sm-2 columns"></div>
+
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
 
 <form class="row" id="eventForm" action="@routes.EventsController.save" method="post">
-    <div class="small-8 columns small-centered" >
-        @helper.inputText(eventForm("id"), '_label -> "ID", 'readonly -> "readonly", '_help -> "")
-        @helper.inputText(eventForm("title"), '_label -> "Title")
-        @helper.inputText(eventForm("location"), '_label -> "Location")
+        <div class=".col-sm-8" >
+
+        @helper.inputText(eventForm("id"), 'class -> "form-control", '_label -> "ID", 'readonly -> "readonly", '_help -> "")
+        @helper.inputText(eventForm("title"), 'class -> "form-control", '_label -> "Title")
+
+
+        @helper.inputText(eventForm("location"), 'class -> "form-control", '_label -> "Location")
+        <script>
+            var autoCompleteAddressBox = new google.maps.places.Autocomplete(document.getElementById("location"), null);
+        </script>
+
+
+        <script>
+            var autoCompleteAddressBox = new google.maps.places.Autocomplete(document.getElementById("location"), null);
+        </script>
+
         @helper.input(eventForm("startTime"), '_label -> "Start Time", '_help -> "" ) { (id, name, value, args) =>
-                <input type="datetime-local" name="@name" id="@id" @toHtmlArgs(args)>
+                <input class="form-control" type="datetime-local" name="@name" id="@id" value="@value" @toHtmlArgs(args)>
             }
-        @helper.input(eventForm("endTime"), '_label -> "End Time", '_help -> "") { (id, name, value, args) =>
-                <input type="datetime-local" name="@name" id="@id" @toHtmlArgs(args)>
-            }
-        @helper.inputText(eventForm("description"), '_label -> "Description", '_help -> "", 'id -> "wysiwyg-editor")
+        @helper.input(eventForm("endTime"), '_label -> "Start Time", '_help -> "" ) { (id, name, value, args) =>
+                <input class="form-control" type="datetime-local" name="@name" id="@id" value="@value" @toHtmlArgs(args)>
+        }
+        @helper.inputText(eventForm("description"), 'class -> "form-control", '_label -> "Description", '_help -> "", 'id -> "wysiwyg-editor")
     </div>
     <div class="row">
-        <button id="saveButton" class="small-12 centered" type="submit">Save</button>
+        <button id="saveButton" class=".col-sm-12" type="submit">Save</button>
     </div>
 </form>
 
@@ -38,6 +59,11 @@
         <ImageUploadButton imageUploadUrl="@routes.EventsController.uploadImage"/>,
         document.getElementById('imageUpload')
     );
+
+    React.render(
+            <EntityList dataSourceUrl="/events/all" entityName="event"/>,
+            document.getElementById('eventsBox')
+        );
     </script>
 }
 }
