--- a/public-bubble/app/views/events.scala.html
+++ b/public-bubble/app/views/events.scala.html
@@ -1,34 +1,60 @@
-@(mainEvent : Event, remainingEvents: Seq[Event])
+@import play.api.Play
+@import util.GooglePlace
+
+@(maybeMainEvent : Option[Event], eventLocation: Option[GooglePlace], upcomingEvents: Option[Seq[Event]], pastEvents : Option[Seq[Event]])
 
 @main("Events") {
-Ooga booga booga
-<div id="eventPage" class="row">
-    <div class="large-3 columns">
-        <div class="sidebar">
+<div class="row"><!--Beginning of the master row-->
+        <div class="sidebar columns large-3"> <!-- TODO move into tag -->
             <div class="hide-for-small">
-
                 <nav class="side-nav ">
-                    @for(event <- remainingEvents) {
+                    @if(!upcomingEvents.isEmpty) {
 
-                    <h3><a href="/event/@event.id">@event.title</a></h3>
+                    <h5>Upcoming Events</h5>
+                    @for(event <- upcomingEvents.get.filter(!_.id.equals(maybeMainEvent.get.id))) {
+                    <b><a href="/event/@event.id">@event.title</a></b>
+                    <br/>
                     }
+                    }
+                    @if(!pastEvents.isEmpty) {
+                    <h5>Past Events</h5>
+                    @for(event <- pastEvents.get.sortWith((a, b) => a.endTime.after(b.endTime))) {
+                         <b><a href="/event/@event.id">@event.title</a></b>
+                         <br/>
+                    }}
                 </nav>
             </div>
         </div>
-    </div>
     <section>
+        @if(maybeMainEvent.isEmpty) {
+        <h1>Come back soon for more events!</h1>
+        } else {
+        <div id="mainEventContainer" class="columns large-9"><!--TODO the article container-->
+            <h3><i>@{maybeMainEvent.get.title}</i></h3>
+            <!--<img src="@{maybeMainEvent.get.image1Url}"/> -->
+            <img src="http://placehold.it/770x270&text=[img]"/>
 
-        <div class="large-9 columns" >
-            <h3>@{mainEvent.title}</h3>
-            <h3>@{mainEvent.location}</h3>
-            <h6>@{mainEvent.startTime}</h6>
-            <h6>@{mainEvent.endTime}</h6>
-                <div>
-                    <img src="@{mainEvent.image1Url}"> <!-- http://placehold.it/800x370&text=[img] -->
+            <div id="whenAndWhere" class="row panel">
+
+                @if(eventLocation.isEmpty) {
+                <p>@{maybeMainEvent.get.location}</p>
+                } else {
+                <div class="large-4 columns">@googlePlaceTag(eventLocation.get)</div>
+                <div class="large-8 columns">
+                    <h4><b>@{eventLocation.get.name}</b></h4>
+                    @{eventLocation.get.formattedAddress}
+                    <br/>
+                    <br/>
+                    @startTimeEndTimeTag(maybeMainEvent.get.startTime, maybeMainEvent.get.endTime)
                 </div>
-                <div>
-                    <p>@Html(mainEvent.description)</p>
-                </div>
+            </div>
+            }
+
+            <p>@Html(maybeMainEvent.get.description)</p>
+        </div>
+        }
+
+
     </section>
-</div>
+</div> <!--End of the master row-->
 }
