--- a/public-bubble/app/views/main.scala.html
+++ b/public-bubble/app/views/main.scala.html
@@ -1,79 +1,81 @@
 @(title: String)(content: Html)
 
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <!--<link rel="icon" href="../../favicon.ico">-->
 
-<html class="no-js" lang="en" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Trident/6.0)">
-    <head>
-        <title>@title</title>
+    <title>@title</title>
 
-        <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <meta name="description" content="Documentation and reference library for ZURB Foundation. JavaScript, CSS, components, grid and more."/>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/blue_theme.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/foundation/foundation.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/foundation/normalize.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/vendor/modernizr.js")"></script>
-        <script src="@routes.Assets.at("javascripts/vendor/jquery.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/react/react.js")"></script>
-        <script src="@routes.Assets.at("javascripts/react/JSXTransformer.js")"></script>
-        <script src="@routes.Assets.at("javascripts/jquery-ui/jquery-ui.min.js")"></script>
+    <!-- Bootstrap core CSS -->
+    <link href="@routes.Assets.at("stylesheets/bootstrap/css/bootstrap.min.css")" rel="stylesheet">
+    <link href="@routes.Assets.at("stylesheets/sticky-footer.css")" rel="stylesheet">
 
+    <!-- Custom styles for this template -->
+    <link href="navbar.css" rel="stylesheet">
 
-    </head>
-    <div style="background-color: #2D2D87">
-    <header class="row">
-        <div id="bubble-banner" >
-        <img src="@routes.Assets.at("images/logo_rework.svg")" class="small-4 columns">
-        <nav id="bubble-banner-nav" class="right">
-            <ul class="button-group">
-            <li><a class="button nav-button" href="/events">
-                <img class="nav-icon" src="@routes.Assets.at("icons/fi-calendar.svg")">
-                <label>Events</label>
-            </a></li>
-            <li><a class="button nav-button" href="/blogs">
-                <img class="nav-icon" src="@routes.Assets.at("icons/fi-comments.svg")">
-                <label>Blogs</label>
-            </a></li>
-            <li><a class="button nav-button" href="/twitter">
-                <img class="nav-icon" src="@routes.Assets.at("icons/fi-social-twitter.svg")">
-                <label>Follow us</label>
-            </a></li>
-            <li><a class="button nav-button" href="/facebook">
-                <img class="nav-icon" src="@routes.Assets.at("icons/fi-like.svg")">
-                <label>Like us</label>
-            </a></li>
-            <!--<li><a class="button" href="/emailUs">-->
-                <!--<img class="nav-icon" src="@routes.Assets.at("icons/fi-mail.svg")">-->
-                <!--<label>Email Us</label>-->
-            <!--</a></li>-->
-            </ul>
-        </nav>
-        </div>
-        </header>
-    </header>
-    </div>
-    </div>
-    <div id="content">
-        @content
-    </div>
-    <div id="footer">
-    <footer id="page-footer">
-                <div class="small-3 columns small-centered">
-                    <p>&copy; Copyright no one at all. Go to town.</p>
-                </div>
-    </footer>
-    </div>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+    <!-- React -->
+    <script src="@routes.Assets.at("javascripts/react/react.js")"></script>
+    <script src="@routes.Assets.at("javascripts/react/JSXTransformer.js")"></script>
+
+</head>
+
+<body>
+
+<div class="container">
+
+    <!-- Static navbar -->
+        <nav class="navbar navbar-default ">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">The Public Bubble</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="/aboutUs">About Us</a></li>
+                    <li><a href="/events">Events</a></li>
+                    <li><a href="/blogs">Blogs</a></li>
+                    <li><a href="/twitter">Follow Us</a></li>
+                    <li><a href="/facebook">Like Us</a></li>
+                </ul>
+            </div><!--/.nav-collapse -->
+        </div><!--/.container-fluid -->
+    </nav>
+
+    @content
+
+</div> <!-- /container -->
+
+<footer class="footer">
+<div class="container">
+    <p class="text-muted">The Public Bubble</p>
+</div>
+</footer>
 
 
-    <!-- foundation dependencies -->
-    <script src="@routes.Assets.at("javascripts/foundation/foundation.js")"></script>
-    <script>
-      $(document).foundation();
-
-      var doc = document.documentElement;
-      doc.setAttribute('data-useragent', navigator.userAgent);
-    </script>
-    </body>
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="@routes.Assets.at("stylesheets/bootstrap/js/bootstrap.min.js")"></script>
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+</body>
 </html>
