Added responsive icons

--- a/public-bubble/app/views/blogs.scala.html
+++ b/public-bubble/app/views/blogs.scala.html
@@ -26,7 +26,7 @@
                 <i style="color:#1371b7">
                     @{mainBlog.title}
             <div>
-                <img src="@{mainBlog.image1Url}"> <!-- http://placehold.it/800x370&text=[img] -->
+                <img class="img-responsive" src="@{mainBlog.image1Url}"> <!-- http://placehold.it/800x370&text=[img] -->
             </div>
             <div>
                 <p>@Html(mainBlog.content)</p>
