--- a/public-bubble/app/views/createBlog.scala.html
+++ b/public-bubble/app/views/createBlog.scala.html
@@ -1,6 +1,6 @@
 @(blogForm: Form[BlogFormData])(implicit messages: Messages)
 
-@main("Blog Form") {
+@contentCreator("Blog Form") {
 
 @wysiwyg()
 
