--- a/public-bubble/app/views/events.scala.html
+++ b/public-bubble/app/views/events.scala.html
@@ -32,7 +32,7 @@
         <div id="mainEventContainer" class="columns large-9"><!--TODO the article container-->
             <h3><i>@{maybeMainEvent.get.title}</i></h3>
             <!--<img src="@{maybeMainEvent.get.image1Url}"/> -->
-            <img src="http://placehold.it/770x270&text=[img]"/>
+            <img class="img-responsive" src="http://placehold.it/770x270&text=[img]"/>
 
             <div id="whenAndWhere" class="row panel">
 
