--- a/public-bubble/app/views/aboutUs.scala.html
+++ b/public-bubble/app/views/aboutUs.scala.html
@@ -2,7 +2,7 @@
 
 <div class="row">
         <h1 class="large-centered column">The Public Bubble</h1>
-        <img class="large-3 columns" src="http://placehold.it/400x240&text=[place holder]"/>
+        <img class="img-responsive" src="http://placehold.it/400x240&text=[place holder]"/>
         <p class="large-9 columns">
         The Public Bubble is run by and for young people on public sector graduate schemes.
         <br/>
