--- a/public-bubble/app/views/main.scala.html
+++ b/public-bubble/app/views/main.scala.html
@@ -15,6 +15,7 @@
     <!-- Bootstrap core CSS -->
     <link href="@routes.Assets.at("stylesheets/bootstrap/css/bootstrap.min.css")" rel="stylesheet">
     <link href="@routes.Assets.at("stylesheets/sticky-footer.css")" rel="stylesheet">
+    <link href="@routes.Assets.at("stylesheets/override.css")" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="navbar.css" rel="stylesheet">
@@ -33,31 +34,48 @@
 
 <body>
 
-<div class="container">
+<!-- Static navbar -->
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">
+                <img style="max-width:150px; margin-top:-18px" src="@routes.Assets.at("images/logo_default.svg")"">
+            </a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="/aboutUs">
+                    <img class="icon-autosize" src="@routes.Assets.at("icons/fi-home.svg")">
+                    About Us
+                    </a>
+                </li>
+                <li><a href="/events">
+                    <img class="icon-autosize" src="@routes.Assets.at("icons/fi-calendar.svg")">
+                    Events
+                </a></li>
+                <li><a href="/blogs">
+                    <img class="icon-autosize" src="@routes.Assets.at("icons/fi-comments.svg")">
+                    Blogs</a></li>
+                <li><a href="/twitter">
+                    <img class="icon-autosize" src="@routes.Assets.at("icons/fi-social-twitter.svg")">
+                    Follow Us</a></li>
+                <li><a href="/facebook">
+                    <img class="icon-autosize" src="@routes.Assets.at("icons/fi-like.svg")">
+                    Like Us
+                </a></li>
 
-    <!-- Static navbar -->
-        <nav class="navbar navbar-default ">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">The Public Bubble</a>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="/aboutUs">About Us</a></li>
-                    <li><a href="/events">Events</a></li>
-                    <li><a href="/blogs">Blogs</a></li>
-                    <li><a href="/twitter">Follow Us</a></li>
-                    <li><a href="/facebook">Like Us</a></li>
-                </ul>
-            </div><!--/.nav-collapse -->
-        </div><!--/.container-fluid -->
-    </nav>
+
+            </ul>
+        </div><!--/.nav-collapse -->
+    </div><!--/.container-fluid -->
+</nav>
+<div class="container">
 
     @content
 
