--- a/public-bubble/app/views/main.scala.html
+++ b/public-bubble/app/views/main.scala.html
@@ -16,6 +16,7 @@
     <link href="@routes.Assets.at("stylesheets/bootstrap/css/bootstrap.min.css")" rel="stylesheet">
     <link href="@routes.Assets.at("stylesheets/sticky-footer.css")" rel="stylesheet">
     <link href="@routes.Assets.at("stylesheets/override.css")" rel="stylesheet">
+    <link href="@routes.Assets.at("stylesheets/custom.css")" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="navbar.css" rel="stylesheet">
@@ -83,7 +84,6 @@
 
 <footer class="footer">
 <div class="container">
-    <p class="text-muted">The Public Bubble</p>
 </div>
 </footer>
 
