Wysiwyg renders in content creator

--- a/public-bubble/app/views/contentCreator.scala.html
+++ b/public-bubble/app/views/contentCreator.scala.html
@@ -55,7 +55,7 @@
     </footer>
     </div>
 
-
+    @wysiwyg()
     <!-- foundation dependencies -->
     <script src="@routes.Assets.at("javascripts/foundation/foundation.js")"></script>
     <script>
