--- a/public-bubble/app/views/createBlog.scala.html
+++ b/public-bubble/app/views/createBlog.scala.html
@@ -1,18 +1,18 @@
 @(blogForm: Form[BlogFormData])(implicit messages: Messages)
-
 @contentCreator("Blog Form") {
 
 <div class="g-signin2" data-onsuccess="onSignIn"></div>
 <div id="blogsBox" class="small-2 columns"></div>
+<div class="row">
+    @if(!blogForm.value.isEmpty) {
+    <div class="small-8 columns small-centered" id="imageUpload"></div>
+    }
+</div>
 
 <form class="row" id="blogForm" action="@routes.BlogsController.save" method="post">
-    <div class="small-8 columns small-centered" >
-        @helper.input(blogForm("id"), '_label -> "ID", 'readonly -> "readonly", '_help -> "") { (id, name, value, args) =>
-        <input class="form-control" type="text" name="@name" id="@id" @toHtmlArgs(args)>
-        }
-        @helper.input(blogForm("title"), '_label -> "Title") { (id, name, value, args) =>
-        <input class="form-control" type="text" name="@name" id="@id" @toHtmlArgs(args)>
-        }
+    <div class="columns small-8 small-centered">
+        @helper.inputText(blogForm("id"), 'class -> "form-control", '_label -> "ID", 'readonly -> "readonly", '_help -> "")
+        @helper.inputText(blogForm("title"), 'class -> "form-control", '_label -> "Title")
         @helper.inputText(blogForm("author"), 'class -> "form-control", '_label -> "Author")
         @helper.inputText(blogForm("intro"), 'class -> "form-control", '_label -> "Intro")
         @helper.inputText(blogForm("content"), 'class -> "form-control", '_label -> "Description", 'id -> "wysiwyg-editor")
@@ -20,8 +20,13 @@
         @helper.inputDate(blogForm("publishDate"), '_help -> "", 'class -> "form-control", '_label -> "Publish Date")
         }
     </div>
+    @if(blogForm.value.isEmpty) {
+    <div class="small-8 columns small-centered alert-box info">
+        You can add images once a blog has been saved successfully.
+    </div>
+    }
     <div class="row">
-        <button id="saveButton" class="small-12 centered" type="submit">Save</button>
+        <button id="saveButton" class="columns small-6" type="submit">Save</button>
     </div>
 </form>
 
@@ -30,12 +35,11 @@
 @if(!blogForm.value.isEmpty) {
 <script src="@routes.Assets.at("javascripts/foundation/foundation.alert.js")" defer></script>
 <script type="text/jsx" src="@routes.Assets.at("javascripts/components/image-upload-button.js")" defer></script>
-<div id="imageUpload"></div>
 <script type="text/jsx">
     React.render(
-        <ImageUploadButton imageUploadUrl="@routes.BlogsController.uploadImage"/>,
+        <ImageUploadButton imageUploadUrl="@routes.BlogsController.uploadImage" domainObject="blog"/>,
         document.getElementById('imageUpload')
     );
     </script>
-    }
+}
 }
