--- a/public-bubble/app/views/main.scala.html
+++ b/public-bubble/app/views/main.scala.html
@@ -50,28 +50,38 @@
             </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="/aboutUs">
-                    <img class="icon-autosize" src="@routes.Assets.at("icons/fi-home.svg")">
-                    About Us
-                    </a>
+            <ul class="nav navbar-nav" >
+                <li><a  href="/aboutUs">
+                    <img class="icon-autosize" src="@routes.Assets.at("icons/fi-home.svg")"">
+                    <p class="nav-text">
+                        About Us
+                    </p>
+                </a>
                 </li>
                 <li><a href="/events">
-                    <img class="icon-autosize" src="@routes.Assets.at("icons/fi-calendar.svg")">
-                    Events
+                    <img class="icon-autosize" src="@routes.Assets.at("icons/fi-calendar.svg")"">
+                    <p class="nav-text">
+                        Events
+                    </p>
                 </a></li>
                 <li><a href="/blogs">
-                    <img class="icon-autosize" src="@routes.Assets.at("icons/fi-comments.svg")">
-                    Blogs</a></li>
-                <li><a href="/twitter">
-                    <img class="icon-autosize" src="@routes.Assets.at("icons/fi-social-twitter.svg")">
-                    Follow Us</a></li>
-                <li><a href="/facebook">
-                    <img class="icon-autosize" src="@routes.Assets.at("icons/fi-like.svg")">
-                    Like Us
+                    <img class="icon-autosize" src="@routes.Assets.at("icons/fi-comments.svg")"">
+                    <p class="nav-text">
+                        Blogs
+                    </p>
                 </a></li>
-
-
+                <li><a href="/twitter">
+                    <img class="icon-autosize" src="@routes.Assets.at("icons/fi-social-twitter.svg")"">
+                    <p class="nav-text">
+                        Follow Us
+                    </p>
+                </a></li>
+                <li><a href="/facebook">
+                    <img class="icon-autosize" src="@routes.Assets.at("icons/fi-like.svg")"">
+                    <p class="nav-text">
+                        Like Us
+                    </p>
+                </a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div><!--/.container-fluid -->
@@ -95,5 +105,16 @@
 <script src="@routes.Assets.at("stylesheets/bootstrap/js/bootstrap.min.js")"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+<!--Google Analytics-->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-67918019-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
