--- a/public-bubble/app/views/main.scala.html
+++ b/public-bubble/app/views/main.scala.html
@@ -33,8 +33,7 @@
 
 </head>
 
-<body>
-
+<body style="background-color:#F8F8FF">
 <!-- Static navbar -->
 <nav class="navbar navbar-default">
     <div class="container-fluid">
@@ -45,11 +44,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">
-                <img style="max-width:150px; margin-top:-18px" src="@routes.Assets.at("images/logo_default.svg")"">
+            <a class="mobile navbar-brand" href="#">
+                <img style="margin-left: -10px" src="@routes.Assets.at("images/logo_default_edit.svg")"">
             </a>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
+        <div id="navbar" style="margin-left:200px"class="navbar-collapse collapse">
             <ul class="nav navbar-nav" >
                 <li><a  href="/aboutUs">
                     <img class="icon-autosize" src="@routes.Assets.at("icons/fi-home.svg")"">
