Responsive mobile logo and new About Us page

--- a/public-bubble/app/views/aboutUs.scala.html
+++ b/public-bubble/app/views/aboutUs.scala.html
@@ -1,18 +1,120 @@
 @main("The Public Bubble") {
 
 <div class="row">
-        <h1 class="large-centered column">The Public Bubble</h1>
-        <img class="img-responsive" src="http://res.cloudinary.com/hw2hioqca/image/upload/v1442873936/11253617_781211005331048_38632204_n_bokvci.jpg"/>
-        <p class="large-9 columns">
-        The Public Bubble is run by and for young people on public sector graduate schemes.
+    <h1 class="text-center column">The Public Bubble</h1>
+    <img class="img-responsive"
+         src="http://res.cloudinary.com/hw2hioqca/image/upload/team_photo_lmc2ak.jpg"/>
+
+    <p class="large-9 columns">
+        The Public Bubble is run by and for graduates on public sector
+        graduate schemes, including the Local Government Association’s
+        NGDP, the Civil Service Fast Stream, Teach First, Police Now,
+        Frontline and the NHS Graduate Scheme.
         <br/>
-        <br/>
-        It aims to foster closer ties and share knowledge between public sector employees by running events for both networking and socialising.
-        <br/>
-        <br/>
-        Participants include trainees on the Civil Service Fast Stream, the Local Government Association’s NGDP scheme, and Teach First.
-        </p>
+
+    <p>
+        We offer a thinking space for public sector graduates, fostering collaboration at the
+
+        grassroots of the sector. Our events are all free and include professional training events,
+
+        speaking events, policy cafes and socials. Check out our events page for more info on what
+
+        we’ve done, and what you can get involved in next.
+    </p>
+
+    <h2>The Team</h2>
+
+
+    The Public Bubble is run by a committee of volunteers, and we’re all public sector graduates from
+
+    across a range of schemes.
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                    <img class="headshot center-block"
+                         src="http://res.cloudinary.com/hw2hioqca/image/upload/v1447799465/hboylan_kiout2.jpg">
+                    <h4 class="text-center">Chair: Hannah Boylan</h4>
+        </div>
+        <div class="row">
+            <div class="col-xs-6">
+                <img class="headshot"
+                     src="http://res.cloudinary.com/hw2hioqca/image/upload/v1447799465/kestdale_pr2tmb.jpg">
+                <h4>Secretary: Katie Estdale</h4>
+
+            </div>
+            <div class="col-xs-6">
+                <img class="headshot"
+                     src="http://res.cloudinary.com/hw2hioqca/image/upload/v1447799465/jsutro_wm9gxa.jpg">
+                <h4>Treasurer and Events: Jessica Sutro</h4>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-6">
+
+                <img class="headshot"
+                     src="http://res.cloudinary.com/hw2hioqca/image/upload/v1447799465/gagyare_skgozt.jpg">
+                <h4>Communications: Giselle Agyare</h4>
+            </div>
+            <div class="col-xs-6">
+                <img class="headshot"
+                     src="http://res.cloudinary.com/hw2hioqca/image/upload/v1447799465/dblackings_xqzqif.jpg">
+                <h4>Communications: Diko Blackings</h4>
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="col-xs-6">
+                <img class="headshot"
+                     src="http://res.cloudinary.com/hw2hioqca/image/upload/v1447799465/nkennedy_hjxa0u.jpg">
+                <h4>Communications and Graduate Scheme Relations Manager: Nessa Kennedy</h4>
+            </div>
+            <div class="col-xs-6">
+                <img class="headshot"
+                     src="http://res.cloudinary.com/hw2hioqca/image/upload/v1447799465/sokeke_ervsek.jpg">
+                <h4>Communications: Shona Okeke</h4>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-6">
+                
+                <img class="headshot"
+                     src="http://res.cloudinary.com/hw2hioqca/image/upload/v1447799465/pbailey_prmged.jpg">
+                <h4>Events and out of London Coordinator: Portia Bailey</h4>
+            </div>
+            <div class="col-xs-6">
+                <img class="headshot"
+                     src="http://res.cloudinary.com/hw2hioqca/image/upload/v1447799465/lburt_iaf11t.jpg">
+                <h4>Events: Liz Burt</h4>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-6">
+                <img class="headshot"
+                     src="http://res.cloudinary.com/hw2hioqca/image/upload/v1447799465/pmcdermott_vzadkc.jpg">
+                <h4>Events: Patrick McDermott</h4>
+            </div>
+            <div class="col-xs-6">
+                <img class="headshot"
+                     src="http://res.cloudinary.com/hw2hioqca/image/upload/v1447799465/hrushton_xgffqg.jpg">
+                <h4>Events: Hayley Rushton</h4>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-6">
+                <img class="headshot"
+                     src="http://res.cloudinary.com/hw2hioqca/image/upload/v1447799465/mstables_ytbjzz.jpg">
+                <h4>Events: Mary Stables</h4>
+            </div>
+            <div class="col-xs-6">
+                <img class="headshot"
+                     src="http://res.cloudinary.com/hw2hioqca/image/upload/v1447799465/slloyd_c5u5am.jpg">
+                <h4>Events: Sophie Lloyd</h4>
+            </div>
+        </div>
+    </div>
 </div>
+    </div>
 
 
 }
