--- a/public-bubble/app/views/main.scala.html
+++ b/public-bubble/app/views/main.scala.html
@@ -44,8 +44,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="mobile navbar-brand" href="#">
-                <img style="margin-left: -10px" src="@routes.Assets.at("images/logo_default_edit.svg")"">
+            <a class="navbar-brand" href="#">
+                <img class="main-logo" style="margin-left: -10px" src="@routes.Assets.at("images/logo_default_edit.svg")"">
             </a>
         </div>
         <div id="navbar" style="margin-left:200px"class="navbar-collapse collapse">
