--- a/public-bubble/public/stylesheets/override.css
+++ b/public-bubble/public/stylesheets/override.css
@@ -15,6 +15,19 @@
   height: 30px;
 }
 
+.icon-autosize {
+  height: 30px;
+}
+
+@media screen and (max-width: 700px) {
+  .icon-autosize {
+    height: 40px;
+  }
+  .main-logo {
+    max-height:50px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .icon-autosize {
     height: 40px;
@@ -25,3 +38,7 @@
    height: 50px;
   }
     }
+
+    .headshot {
+            max-height:120px;
+        }
