Add dropzone dependency

--- a/app/views/portal.scala.html
+++ b/app/views/portal.scala.html
@@ -7,6 +7,22 @@
 <li><a href="/create/event">Add or Edit an Event</a></li>
 <li><a href="/create/blog">Add or Edit a Blog entry</a></li>
 
+
+<script src="@routes.Assets.at("javascripts/dropzone/dropzone.js")"></script>
+
+<h2>Edit the committee</h2>
+
+
+<p>
+  This is the most minimal example of Dropzone. The upload in this example
+  doesn't work, because there is no actual server to handle the file upload.
+</p>
+
+<!-- Change /upload-target to your upload address -->
+<form action="/upload-target" class="dropzone"></form>
+
+
+
 @logoutButton()
 
 }
