--- a/app/views/portal.scala.html
+++ b/app/views/portal.scala.html
@@ -7,8 +7,8 @@
 <li><a href="/create/event">Add or Edit an Event</a></li>
 <li><a href="/create/blog">Add or Edit a Blog entry</a></li>
 
-
 <script src="@routes.Assets.at("javascripts/dropzone/dropzone.js")"></script>
+<link href="@routes.Assets.at("stylesheets/dropzone.css")" rel="stylesheet">
 
 <h2>Edit the committee</h2>
 
